--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
+    "@pinia/nuxt": "^0.5.3",
     "gsap": "^3.12.5",
     "nuxt": "^3.12.4",
     "pinia": "^2.2.2",
