added flowbite + dark mode toggle working

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@pinia/nuxt": "^0.5.3",
+    "flowbite": "^2.5.1",
+    "flowbite-vue": "^0.1.6",
     "gsap": "^3.12.5",
     "nuxt": "^3.12.4",
     "pinia": "^2.2.2",
